--- a/credentials/conf/locale/eo/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/eo/LC_MESSAGES/django.po
@@ -1,14 +1,14 @@
 # edX translation file.
-# Copyright (C) 2022 EdX
+# Copyright (C) 2023 EdX
 # This file is distributed under the GNU AFFERO GENERAL PUBLIC LICENSE.
-# EdX Team <info@edx.org>, 2022.
+# EdX Team <info@edx.org>, 2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2022-11-22 08:35-0500\n"
-"PO-Revision-Date: 2022-11-22 13:35:02.798112\n"
+"POT-Creation-Date: 2023-01-26 11:28+0000\n"
+"PO-Revision-Date: 2023-01-26 11:28:52.590247\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: eo\n"
@@ -338,6 +338,18 @@ msgid ""
 msgstr ""
 "Thé föllöwïng ïs ä lïst öf äll äçtïvé prögräms för whïçh prögräm réçörds äré"
 " ßéïng générätéd. Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σ#"
+
+#: apps/verifiable_credentials/models.py
+msgid "Verifiable Credentials"
+msgstr "Vérïfïäßlé Çrédéntïäls Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢#"
+
+#: apps/verifiable_credentials/models.py
+msgid "Open Badges v3"
+msgstr "Öpén Bädgés v3 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт#"
+
+#: apps/verifiable_credentials/models.py
+msgid "Digital Credential Format"
+msgstr "Dïgïtäl Çrédéntïäl Förmät Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕ#"
 
 #: templates/404.html
 msgid "Page Not Found"
