chore(i18n): update translations

--- a/credentials/conf/locale/rtl/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/rtl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-01-26 11:28+0000\n"
-"PO-Revision-Date: 2023-01-26 11:28:52.590247\n"
+"POT-Creation-Date: 2023-02-22 08:20+0000\n"
+"PO-Revision-Date: 2023-02-22 08:20:41.674583\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: rtl\n"
@@ -313,17 +313,55 @@ msgstr ""
 "Ŧɥǝ ɟølløʍᴉnƃ ᴉs ɐ lᴉsʇ øɟ ɐll ɐɔʇᴉʌǝ dɹøƃɹɐɯs ɟøɹ ʍɥᴉɔɥ dɹøƃɹɐɯ ɹǝɔøɹds ɐɹǝ"
 " bǝᴉnƃ ƃǝnǝɹɐʇǝd."
 
-#: apps/verifiable_credentials/models.py
-msgid "Verifiable Credentials"
-msgstr "Vǝɹᴉɟᴉɐblǝ Ȼɹǝdǝnʇᴉɐls"
+#: apps/verifiable_credentials/issuance.py
+msgid "Couldn't find such issuance line: ['issuance_uuid']"
+msgstr "Ȼønldn'ʇ ɟᴉnd snɔɥ ᴉssnɐnɔǝ lᴉnǝ: ['ᴉssnɐnɔǝ_nnᴉd']"
+
+#: apps/verifiable_credentials/issuance.py
+#, python-brace-format
+msgid "No such user credential [{credential_uuid}]"
+msgstr "Nø snɔɥ nsǝɹ ɔɹǝdǝnʇᴉɐl [{credential_uuid}]"
+
+#: apps/verifiable_credentials/issuance.py
+#, python-brace-format
+msgid "Provided storage backend isn't active [{storage_id}]"
+msgstr "Ᵽɹøʌᴉdǝd sʇøɹɐƃǝ bɐɔʞǝnd ᴉsn'ʇ ɐɔʇᴉʌǝ [{storage_id}]"
 
 #: apps/verifiable_credentials/models.py
-msgid "Open Badges v3"
-msgstr "Ødǝn Ƀɐdƃǝs ʌ3"
+msgid "Related Open edX learner credential"
+msgstr "Ɍǝlɐʇǝd Ødǝn ǝdX lǝɐɹnǝɹ ɔɹǝdǝnʇᴉɐl"
 
 #: apps/verifiable_credentials/models.py
-msgid "Digital Credential Format"
-msgstr "Đᴉƃᴉʇɐl Ȼɹǝdǝnʇᴉɐl Føɹɯɐʇ"
+msgid "Completeness indicator"
+msgstr "Ȼøɯdlǝʇǝnǝss ᴉndᴉɔɐʇøɹ"
+
+#: apps/verifiable_credentials/models.py
+msgid "Issuer DID"
+msgstr "Ɨssnǝɹ ĐƗĐ"
+
+#: apps/verifiable_credentials/models.py
+msgid "Target storage identifier"
+msgstr "Ŧɐɹƃǝʇ sʇøɹɐƃǝ ᴉdǝnʇᴉɟᴉǝɹ"
+
+#: apps/verifiable_credentials/models.py
+msgid "Holder DID"
+msgstr "Ħøldǝɹ ĐƗĐ"
+
+#: apps/verifiable_credentials/models.py
+msgid "Subject DID (if not provided corresponds to \"Holder ID\")"
+msgstr "Snbɾǝɔʇ ĐƗĐ (ᴉɟ nøʇ dɹøʌᴉdǝd ɔøɹɹǝsdønds ʇø \"Ħøldǝɹ ƗĐ\")"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+msgid "Incomplete required data: ['credential_uuid', 'storage_id']"
+msgstr "Ɨnɔøɯdlǝʇǝ ɹǝbnᴉɹǝd dɐʇɐ: ['ɔɹǝdǝnʇᴉɐl_nnᴉd', 'sʇøɹɐƃǝ_ᴉd']"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+msgid "Credential identifier must be valid UUID: ['credential_uuid']"
+msgstr "Ȼɹǝdǝnʇᴉɐl ᴉdǝnʇᴉɟᴉǝɹ ɯnsʇ bǝ ʌɐlᴉd ɄɄƗĐ: ['ɔɹǝdǝnʇᴉɐl_nnᴉd']"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+msgid "Verifiable Credentials issuance sandbox"
+msgstr "Vǝɹᴉɟᴉɐblǝ Ȼɹǝdǝnʇᴉɐls ᴉssnɐnɔǝ sɐndbøx"
 
 #: templates/404.html
 msgid "Page Not Found"
