fix: [OeX_Cred-540] UUID format validation (#22)
* fix: [OeX_Cred-540] UUID format validation

* fix: temporary skip deprecated tests

* chore(i18n): update translations

* chore(i18n): update translations

--- a/credentials/conf/locale/eo/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/eo/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-01-26 11:28+0000\n"
-"PO-Revision-Date: 2023-01-26 11:28:52.590247\n"
+"POT-Creation-Date: 2023-02-22 08:26+0000\n"
+"PO-Revision-Date: 2023-02-22 08:26:26.194348\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: eo\n"
@@ -339,17 +339,70 @@ msgstr ""
 "Thé föllöwïng ïs ä lïst öf äll äçtïvé prögräms för whïçh prögräm réçörds äré"
 " ßéïng générätéd. Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σ#"
 
-#: apps/verifiable_credentials/models.py
-msgid "Verifiable Credentials"
-msgstr "Vérïfïäßlé Çrédéntïäls Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢#"
+#: apps/verifiable_credentials/issuance.py
+msgid "Couldn't find such issuance line: ['issuance_uuid']"
+msgstr ""
+"Çöüldn't fïnd süçh ïssüänçé lïné: ['ïssüänçé_üüïd'] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт "
+"αмєт, ¢σηѕє¢тєтυя α#"
+
+#: apps/verifiable_credentials/issuance.py
+#, python-brace-format
+msgid "No such user credential [{credential_uuid}]"
+msgstr ""
+"Nö süçh üsér çrédéntïäl [{credential_uuid}] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
+"¢σηѕє¢#"
+
+#: apps/verifiable_credentials/issuance.py
+#, python-brace-format
+msgid "Provided storage backend isn't active [{storage_id}]"
+msgstr ""
+"Prövïdéd störägé ßäçkénd ïsn't äçtïvé [{storage_id}] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт "
+"αмєт, ¢σηѕє¢тєтυя #"
 
 #: apps/verifiable_credentials/models.py
-msgid "Open Badges v3"
-msgstr "Öpén Bädgés v3 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт#"
+msgid "Related Open edX learner credential"
+msgstr ""
+"Rélätéd Öpén édX léärnér çrédéntïäl Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тєт#"
 
 #: apps/verifiable_credentials/models.py
-msgid "Digital Credential Format"
-msgstr "Dïgïtäl Çrédéntïäl Förmät Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕ#"
+msgid "Completeness indicator"
+msgstr "Çömpléténéss ïndïçätör Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢#"
+
+#: apps/verifiable_credentials/models.py
+msgid "Issuer DID"
+msgstr "Ìssüér DÌD Ⱡ'σяєм ιρѕυм ∂σłσ#"
+
+#: apps/verifiable_credentials/models.py
+msgid "Target storage identifier"
+msgstr "Tärgét störägé ïdéntïfïér Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕ#"
+
+#: apps/verifiable_credentials/models.py
+msgid "Holder DID"
+msgstr "Höldér DÌD Ⱡ'σяєм ιρѕυм ∂σłσ#"
+
+#: apps/verifiable_credentials/models.py
+msgid "Subject DID (if not provided corresponds to \"Holder ID\")"
+msgstr ""
+"Süßjéçt DÌD (ïf nöt prövïdéd çörréspönds tö \"Höldér ÌD\") Ⱡ'σяєм ιρѕυм "
+"∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+msgid "Incomplete required data: ['credential_uuid', 'storage_id']"
+msgstr ""
+"Ìnçömplété réqüïréd dätä: ['çrédéntïäl_üüïd', 'störägé_ïd'] Ⱡ'σяєм ιρѕυм "
+"∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+msgid "Credential identifier must be valid UUID: ['credential_uuid']"
+msgstr ""
+"Çrédéntïäl ïdéntïfïér müst ßé välïd ÛÛÌD: ['çrédéntïäl_üüïd'] Ⱡ'σяєм ιρѕυм "
+"∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+msgid "Verifiable Credentials issuance sandbox"
+msgstr ""
+"Vérïfïäßlé Çrédéntïäls ïssüänçé sändßöx Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
+"¢σηѕє¢тєтυя#"
 
 #: templates/404.html
 msgid "Page Not Found"
