--- a/credentials/conf/locale/eo/LC_MESSAGES/djangojs.po
+++ b/credentials/conf/locale/eo/LC_MESSAGES/djangojs.po
@@ -1,14 +1,14 @@
 # edX translation file.
-# Copyright (C) 2022 EdX
+# Copyright (C) 2023 EdX
 # This file is distributed under the GNU AFFERO GENERAL PUBLIC LICENSE.
-# EdX Team <info@edx.org>, 2022.
+# EdX Team <info@edx.org>, 2023.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2022-11-22 08:35-0500\n"
-"PO-Revision-Date: 2022-11-22 13:35:02.804422\n"
+"POT-Creation-Date: 2023-02-22 08:26+0000\n"
+"PO-Revision-Date: 2023-02-22 08:26:26.166198\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: eo\n"
@@ -62,10 +62,6 @@ msgstr ""
 #: static/components/ProgramRecord.jsx
 msgid "Earned"
 msgstr "Éärnéd Ⱡ'σяєм ιρѕυ#"
-
-#: static/components/ProgramRecord.jsx
-msgid "Not Earned"
-msgstr "Nöt Éärnéd Ⱡ'σяєм ιρѕυм ∂σłσ#"
 
 #: static/components/ProgramRecord.jsx
 msgid "Back to My Records"
@@ -127,6 +123,10 @@ msgstr "{type} Prögräm Réçörd Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт α
 #: static/components/ProgramRecord.jsx static/components/RecordsList.jsx
 msgid "Completed"
 msgstr "Çömplétéd Ⱡ'σяєм ιρѕυм ∂σł#"
+
+#: static/components/ProgramRecord.jsx
+msgid "Not Earned"
+msgstr "Nöt Éärnéd Ⱡ'σяєм ιρѕυм ∂σłσ#"
 
 #: static/components/ProgramRecord.jsx static/components/RecordsList.jsx
 msgid "Partially Completed"
