feat: [OeX_Cred-578] add available storages API endpoint (#28)
* feat: [OeX_Cred-578] add available storages API endpoint

* refactor: storages API endpoint

* chore: update translations

* fix: try to fix translations check

* fix: manually reshaffle translations

---------

Co-authored-by: wowkalucky <wowkalucky@gmail.com>

--- a/credentials/conf/locale/eo/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/eo/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-02-22 08:26+0000\n"
-"PO-Revision-Date: 2023-02-22 08:26:26.194348\n"
+"POT-Creation-Date: 2023-03-09 11:14+0000\n"
+"PO-Revision-Date: 2023-03-09 11:14:09.097825\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: eo\n"
@@ -346,18 +346,18 @@ msgstr ""
 "αмєт, ¢σηѕє¢тєтυя α#"
 
 #: apps/verifiable_credentials/issuance.py
-#, python-brace-format
-msgid "No such user credential [{credential_uuid}]"
+#, python-format
+msgid "No such user credential [%(credential_uuid)s]"
 msgstr ""
-"Nö süçh üsér çrédéntïäl [{credential_uuid}] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
+"Nö süçh üsér çrédéntïäl [%(credential_uuid)s] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
 "¢σηѕє¢#"
 
 #: apps/verifiable_credentials/issuance.py
-#, python-brace-format
-msgid "Provided storage backend isn't active [{storage_id}]"
+#, python-format
+msgid "Provided storage backend isn't active [%(storage_id)s]"
 msgstr ""
-"Prövïdéd störägé ßäçkénd ïsn't äçtïvé [{storage_id}] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт "
-"αмєт, ¢σηѕє¢тєтυя #"
+"Prövïdéd störägé ßäçkénd ïsn't äçtïvé [%(storage_id)s] Ⱡ'σяєм ιρѕυм ∂σłσя "
+"ѕιт αмєт, ¢σηѕє¢тєтυя #"
 
 #: apps/verifiable_credentials/models.py
 msgid "Related Open edX learner credential"
@@ -403,6 +403,10 @@ msgid "Verifiable Credentials issuance sandbox"
 msgstr ""
 "Vérïfïäßlé Çrédéntïäls ïssüänçé sändßöx Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
 "¢σηѕє¢тєтυя#"
+
+#: apps/verifiable_credentials/storages/learner_credential_wallet.py
+msgid "Learner Credential Wallet"
+msgstr "Léärnér Çrédéntïäl Wällét Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕ#"
 
 #: templates/404.html
 msgid "Page Not Found"
