--- a/credentials/conf/locale/rtl/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/rtl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-02-22 08:26+0000\n"
-"PO-Revision-Date: 2023-02-22 08:26:26.194348\n"
+"POT-Creation-Date: 2023-03-09 11:14+0000\n"
+"PO-Revision-Date: 2023-03-09 11:14:09.097825\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: rtl\n"
@@ -318,14 +318,14 @@ msgid "Couldn't find such issuance line: ['issuance_uuid']"
 msgstr "Ȼønldn'ʇ ɟᴉnd snɔɥ ᴉssnɐnɔǝ lᴉnǝ: ['ᴉssnɐnɔǝ_nnᴉd']"
 
 #: apps/verifiable_credentials/issuance.py
-#, python-brace-format
-msgid "No such user credential [{credential_uuid}]"
-msgstr "Nø snɔɥ nsǝɹ ɔɹǝdǝnʇᴉɐl [{credential_uuid}]"
+#, python-format
+msgid "No such user credential [%(credential_uuid)s]"
+msgstr "Nø snɔɥ nsǝɹ ɔɹǝdǝnʇᴉɐl [%(credential_uuid)s]"
 
 #: apps/verifiable_credentials/issuance.py
-#, python-brace-format
-msgid "Provided storage backend isn't active [{storage_id}]"
-msgstr "Ᵽɹøʌᴉdǝd sʇøɹɐƃǝ bɐɔʞǝnd ᴉsn'ʇ ɐɔʇᴉʌǝ [{storage_id}]"
+#, python-format
+msgid "Provided storage backend isn't active [%(storage_id)s]"
+msgstr "Ᵽɹøʌᴉdǝd sʇøɹɐƃǝ bɐɔʞǝnd ᴉsn'ʇ ɐɔʇᴉʌǝ [%(storage_id)s]"
 
 #: apps/verifiable_credentials/models.py
 msgid "Related Open edX learner credential"
@@ -362,6 +362,10 @@ msgstr "Ȼɹǝdǝnʇᴉɐl ᴉdǝnʇᴉɟᴉǝɹ ɯnsʇ bǝ ʌɐlᴉd ɄɄƗĐ: 
 #: apps/verifiable_credentials/rest_api/v1/views.py
 msgid "Verifiable Credentials issuance sandbox"
 msgstr "Vǝɹᴉɟᴉɐblǝ Ȼɹǝdǝnʇᴉɐls ᴉssnɐnɔǝ sɐndbøx"
+
+#: apps/verifiable_credentials/storages/learner_credential_wallet.py
+msgid "Learner Credential Wallet"
+msgstr "Łǝɐɹnǝɹ Ȼɹǝdǝnʇᴉɐl Wɐllǝʇ"
 
 #: templates/404.html
 msgid "Page Not Found"
