chore: update translations

--- a/credentials/conf/locale/en/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-03-09 11:14+0000\n"
-"PO-Revision-Date: 2023-03-09 11:14:09.097825\n"
+"POT-Creation-Date: 2023-03-15 08:20+0000\n"
+"PO-Revision-Date: 2023-03-15 08:20:47.865084\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: en\n"
@@ -298,18 +298,17 @@ msgid ""
 " being generated."
 msgstr ""
 
-#: apps/verifiable_credentials/issuance.py
-msgid "Couldn't find such issuance line: ['issuance_uuid']"
+#: apps/verifiable_credentials/composition/open_badges.py
+msgid "Open Badges Specification v3.0"
+msgstr ""
+
+#: apps/verifiable_credentials/composition/verifiable_credentials.py
+msgid "Verifiable Credentials Data Model v1.1"
 msgstr ""
 
 #: apps/verifiable_credentials/issuance.py
-#, python-format
-msgid "No such user credential [%(credential_uuid)s]"
-msgstr ""
-
-#: apps/verifiable_credentials/issuance.py
-#, python-format
-msgid "Provided storage backend isn't active [%(storage_id)s]"
+#, python-brace-format
+msgid "Couldn't find such issuance line: [{issuance_uuid}]"
 msgstr ""
 
 #: apps/verifiable_credentials/models.py
@@ -329,15 +328,15 @@ msgid "Target storage identifier"
 msgstr ""
 
 #: apps/verifiable_credentials/models.py
-msgid "Holder DID"
+msgid "Verifiable credential subject DID"
 msgstr ""
 
 #: apps/verifiable_credentials/models.py
-msgid "Subject DID (if not provided corresponds to \"Holder ID\")"
+msgid "Verifiable credential specification to use"
 msgstr ""
 
 #: apps/verifiable_credentials/rest_api/v1/views.py
-msgid "Incomplete required data: ['credential_uuid', 'storage_id']"
+msgid "Mandatory data is missing"
 msgstr ""
 
 #: apps/verifiable_credentials/rest_api/v1/views.py
@@ -345,7 +344,15 @@ msgid "Credential identifier must be valid UUID: ['credential_uuid']"
 msgstr ""
 
 #: apps/verifiable_credentials/rest_api/v1/views.py
-msgid "Verifiable Credentials issuance sandbox"
+#, python-format
+msgid "No such user credential [%(credential_uuid)s]"
+msgstr ""
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+#, python-brace-format
+msgid ""
+"Provided storage backend ({storage_id}) isn't active.                 "
+"Storages: {active_storages}"
 msgstr ""
 
 #: apps/verifiable_credentials/storages/learner_credential_wallet.py
