--- a/credentials/conf/locale/eo/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/eo/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-03-09 11:14+0000\n"
-"PO-Revision-Date: 2023-03-09 11:14:09.097825\n"
+"POT-Creation-Date: 2023-03-15 08:20+0000\n"
+"PO-Revision-Date: 2023-03-15 08:20:47.865084\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: eo\n"
@@ -339,25 +339,22 @@ msgstr ""
 "Thé föllöwïng ïs ä lïst öf äll äçtïvé prögräms för whïçh prögräm réçörds äré"
 " ßéïng générätéd. Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σ#"
 
-#: apps/verifiable_credentials/issuance.py
-msgid "Couldn't find such issuance line: ['issuance_uuid']"
+#: apps/verifiable_credentials/composition/open_badges.py
+msgid "Open Badges Specification v3.0"
+msgstr "Öpén Bädgés Spéçïfïçätïön v3.0 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢т#"
+
+#: apps/verifiable_credentials/composition/verifiable_credentials.py
+msgid "Verifiable Credentials Data Model v1.1"
 msgstr ""
-"Çöüldn't fïnd süçh ïssüänçé lïné: ['ïssüänçé_üüïd'] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт "
-"αмєт, ¢σηѕє¢тєтυя α#"
+"Vérïfïäßlé Çrédéntïäls Dätä Mödél v1.1 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
+"¢σηѕє¢тєтυя#"
 
 #: apps/verifiable_credentials/issuance.py
-#, python-format
-msgid "No such user credential [%(credential_uuid)s]"
+#, python-brace-format
+msgid "Couldn't find such issuance line: [{issuance_uuid}]"
 msgstr ""
-"Nö süçh üsér çrédéntïäl [%(credential_uuid)s] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
-"¢σηѕє¢#"
-
-#: apps/verifiable_credentials/issuance.py
-#, python-format
-msgid "Provided storage backend isn't active [%(storage_id)s]"
-msgstr ""
-"Prövïdéd störägé ßäçkénd ïsn't äçtïvé [%(storage_id)s] Ⱡ'σяєм ιρѕυм ∂σłσя "
-"ѕιт αмєт, ¢σηѕє¢тєтυя #"
+"Çöüldn't fïnd süçh ïssüänçé lïné: [{issuance_uuid}] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт "
+"αмєт, ¢σηѕє¢тєтυя#"
 
 #: apps/verifiable_credentials/models.py
 msgid "Related Open edX learner credential"
@@ -377,20 +374,19 @@ msgid "Target storage identifier"
 msgstr "Tärgét störägé ïdéntïfïér Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕ#"
 
 #: apps/verifiable_credentials/models.py
-msgid "Holder DID"
-msgstr "Höldér DÌD Ⱡ'σяєм ιρѕυм ∂σłσ#"
+msgid "Verifiable credential subject DID"
+msgstr ""
+"Vérïfïäßlé çrédéntïäl süßjéçt DÌD Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тє#"
 
 #: apps/verifiable_credentials/models.py
-msgid "Subject DID (if not provided corresponds to \"Holder ID\")"
+msgid "Verifiable credential specification to use"
 msgstr ""
-"Süßjéçt DÌD (ïf nöt prövïdéd çörréspönds tö \"Höldér ÌD\") Ⱡ'σяєм ιρѕυм "
-"∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+"Vérïfïäßlé çrédéntïäl spéçïfïçätïön tö üsé Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
+"¢σηѕє¢тєтυя #"
 
 #: apps/verifiable_credentials/rest_api/v1/views.py
-msgid "Incomplete required data: ['credential_uuid', 'storage_id']"
-msgstr ""
-"Ìnçömplété réqüïréd dätä: ['çrédéntïäl_üüïd', 'störägé_ïd'] Ⱡ'σяєм ιρѕυм "
-"∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+msgid "Mandatory data is missing"
+msgstr "Mändätörý dätä ïs mïssïng Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕ#"
 
 #: apps/verifiable_credentials/rest_api/v1/views.py
 msgid "Credential identifier must be valid UUID: ['credential_uuid']"
@@ -399,10 +395,20 @@ msgstr ""
 "∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
 
 #: apps/verifiable_credentials/rest_api/v1/views.py
-msgid "Verifiable Credentials issuance sandbox"
+#, python-format
+msgid "No such user credential [%(credential_uuid)s]"
 msgstr ""
-"Vérïfïäßlé Çrédéntïäls ïssüänçé sändßöx Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
-"¢σηѕє¢тєтυя#"
+"Nö süçh üsér çrédéntïäl [%(credential_uuid)s] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
+"¢σηѕє¢#"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+#, python-brace-format
+msgid ""
+"Provided storage backend ({storage_id}) isn't active.                 "
+"Storages: {active_storages}"
+msgstr ""
+"Prövïdéd störägé ßäçkénd ({storage_id}) ïsn't äçtïvé.                 "
+"Störägés: {active_storages} Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυ#"
 
 #: apps/verifiable_credentials/storages/learner_credential_wallet.py
 msgid "Learner Credential Wallet"
