--- a/credentials/conf/locale/rtl/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/rtl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-03-09 11:14+0000\n"
-"PO-Revision-Date: 2023-03-09 11:14:09.097825\n"
+"POT-Creation-Date: 2023-03-15 08:20+0000\n"
+"PO-Revision-Date: 2023-03-15 08:20:47.865084\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: rtl\n"
@@ -313,19 +313,18 @@ msgstr ""
 "Ŧɥǝ ɟølløʍᴉnƃ ᴉs ɐ lᴉsʇ øɟ ɐll ɐɔʇᴉʌǝ dɹøƃɹɐɯs ɟøɹ ʍɥᴉɔɥ dɹøƃɹɐɯ ɹǝɔøɹds ɐɹǝ"
 " bǝᴉnƃ ƃǝnǝɹɐʇǝd."
 
-#: apps/verifiable_credentials/issuance.py
-msgid "Couldn't find such issuance line: ['issuance_uuid']"
-msgstr "Ȼønldn'ʇ ɟᴉnd snɔɥ ᴉssnɐnɔǝ lᴉnǝ: ['ᴉssnɐnɔǝ_nnᴉd']"
+#: apps/verifiable_credentials/composition/open_badges.py
+msgid "Open Badges Specification v3.0"
+msgstr "Ødǝn Ƀɐdƃǝs Sdǝɔᴉɟᴉɔɐʇᴉøn ʌ3.0"
+
+#: apps/verifiable_credentials/composition/verifiable_credentials.py
+msgid "Verifiable Credentials Data Model v1.1"
+msgstr "Vǝɹᴉɟᴉɐblǝ Ȼɹǝdǝnʇᴉɐls Đɐʇɐ Mødǝl ʌ1.1"
 
 #: apps/verifiable_credentials/issuance.py
-#, python-format
-msgid "No such user credential [%(credential_uuid)s]"
-msgstr "Nø snɔɥ nsǝɹ ɔɹǝdǝnʇᴉɐl [%(credential_uuid)s]"
-
-#: apps/verifiable_credentials/issuance.py
-#, python-format
-msgid "Provided storage backend isn't active [%(storage_id)s]"
-msgstr "Ᵽɹøʌᴉdǝd sʇøɹɐƃǝ bɐɔʞǝnd ᴉsn'ʇ ɐɔʇᴉʌǝ [%(storage_id)s]"
+#, python-brace-format
+msgid "Couldn't find such issuance line: [{issuance_uuid}]"
+msgstr "Ȼønldn'ʇ ɟᴉnd snɔɥ ᴉssnɐnɔǝ lᴉnǝ: [{issuance_uuid}]"
 
 #: apps/verifiable_credentials/models.py
 msgid "Related Open edX learner credential"
@@ -344,24 +343,34 @@ msgid "Target storage identifier"
 msgstr "Ŧɐɹƃǝʇ sʇøɹɐƃǝ ᴉdǝnʇᴉɟᴉǝɹ"
 
 #: apps/verifiable_credentials/models.py
-msgid "Holder DID"
-msgstr "Ħøldǝɹ ĐƗĐ"
+msgid "Verifiable credential subject DID"
+msgstr "Vǝɹᴉɟᴉɐblǝ ɔɹǝdǝnʇᴉɐl snbɾǝɔʇ ĐƗĐ"
 
 #: apps/verifiable_credentials/models.py
-msgid "Subject DID (if not provided corresponds to \"Holder ID\")"
-msgstr "Snbɾǝɔʇ ĐƗĐ (ᴉɟ nøʇ dɹøʌᴉdǝd ɔøɹɹǝsdønds ʇø \"Ħøldǝɹ ƗĐ\")"
+msgid "Verifiable credential specification to use"
+msgstr "Vǝɹᴉɟᴉɐblǝ ɔɹǝdǝnʇᴉɐl sdǝɔᴉɟᴉɔɐʇᴉøn ʇø nsǝ"
 
 #: apps/verifiable_credentials/rest_api/v1/views.py
-msgid "Incomplete required data: ['credential_uuid', 'storage_id']"
-msgstr "Ɨnɔøɯdlǝʇǝ ɹǝbnᴉɹǝd dɐʇɐ: ['ɔɹǝdǝnʇᴉɐl_nnᴉd', 'sʇøɹɐƃǝ_ᴉd']"
+msgid "Mandatory data is missing"
+msgstr "Mɐndɐʇøɹʎ dɐʇɐ ᴉs ɯᴉssᴉnƃ"
 
 #: apps/verifiable_credentials/rest_api/v1/views.py
 msgid "Credential identifier must be valid UUID: ['credential_uuid']"
 msgstr "Ȼɹǝdǝnʇᴉɐl ᴉdǝnʇᴉɟᴉǝɹ ɯnsʇ bǝ ʌɐlᴉd ɄɄƗĐ: ['ɔɹǝdǝnʇᴉɐl_nnᴉd']"
 
 #: apps/verifiable_credentials/rest_api/v1/views.py
-msgid "Verifiable Credentials issuance sandbox"
-msgstr "Vǝɹᴉɟᴉɐblǝ Ȼɹǝdǝnʇᴉɐls ᴉssnɐnɔǝ sɐndbøx"
+#, python-format
+msgid "No such user credential [%(credential_uuid)s]"
+msgstr "Nø snɔɥ nsǝɹ ɔɹǝdǝnʇᴉɐl [%(credential_uuid)s]"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+#, python-brace-format
+msgid ""
+"Provided storage backend ({storage_id}) isn't active.                 "
+"Storages: {active_storages}"
+msgstr ""
+"Ᵽɹøʌᴉdǝd sʇøɹɐƃǝ bɐɔʞǝnd ({storage_id}) ᴉsn'ʇ ɐɔʇᴉʌǝ.                 "
+"Sʇøɹɐƃǝs: {active_storages}"
 
 #: apps/verifiable_credentials/storages/learner_credential_wallet.py
 msgid "Learner Credential Wallet"
