--- a/credentials/conf/locale/eo/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/eo/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-03-20 09:50+0000\n"
-"PO-Revision-Date: 2023-03-20 09:50:31.906594\n"
+"POT-Creation-Date: 2023-03-26 15:32+0000\n"
+"PO-Revision-Date: 2023-03-26 15:32:55.668953\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: eo\n"
@@ -339,9 +339,20 @@ msgstr ""
 "Thé föllöwïng ïs ä lïst öf äll äçtïvé prögräms för whïçh prögräm réçörds äré"
 " ßéïng générätéd. Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σ#"
 
+#: apps/verifiable_credentials/admin.py
+msgid "At least one Issuer must be always enabled!"
+msgstr ""
+"Àt léäst öné Ìssüér müst ßé älwäýs énäßléd! Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
+"¢σηѕє¢тєтυя #"
+
 #: apps/verifiable_credentials/composition/open_badges.py
 msgid "Open Badges Specification v3.0"
 msgstr "Öpén Bädgés Spéçïfïçätïön v3.0 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢т#"
+
+#: apps/verifiable_credentials/composition/status_list.py
+#: apps/verifiable_credentials/storages/status_list.py
+msgid "Status List 2021"
+msgstr "Stätüs Lïst 2021 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αм#"
 
 #: apps/verifiable_credentials/composition/verifiable_credentials.py
 msgid "Verifiable Credentials Data Model v1.1"
@@ -349,26 +360,23 @@ msgstr ""
 "Vérïfïäßlé Çrédéntïäls Dätä Mödél v1.1 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
 "¢σηѕє¢тєтυя#"
 
-#: apps/verifiable_credentials/issuance/__init__.py
+#: apps/verifiable_credentials/issuance/main.py
 #, python-brace-format
 msgid "Couldn't find such issuance line: [{issuance_uuid}]"
 msgstr ""
 "Çöüldn't fïnd süçh ïssüänçé lïné: [{issuance_uuid}] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт "
 "αмєт, ¢σηѕє¢тєтυя#"
 
-#: apps/verifiable_credentials/issuance/__init__.py
+#: apps/verifiable_credentials/issuance/main.py
+#, python-brace-format
+msgid "Seems credential isn't active anymore: [{credential_id}]"
+msgstr ""
+"Sééms çrédéntïäl ïsn't äçtïvé änýmöré: [{credential_id}] Ⱡ'σяєм ιρѕυм ∂σłσя "
+"ѕιт αмєт, ¢σηѕє¢тєтυя #"
+
+#: apps/verifiable_credentials/issuance/main.py
 msgid "Provided data didn't validate"
 msgstr "Prövïdéd dätä dïdn't välïdäté Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢#"
-
-#: apps/verifiable_credentials/issuance/__init__.py
-msgid "defined property wasn't found within the linked data graph"
-msgstr ""
-"défïnéd pröpértý wäsn't föünd wïthïn thé lïnkéd dätä gräph Ⱡ'σяєм ιρѕυм "
-"∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
-
-#: apps/verifiable_credentials/issuance/__init__.py
-msgid "identifier not recognized"
-msgstr "ïdéntïfïér nöt réçögnïzéd Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕ#"
 
 #: apps/verifiable_credentials/issuance/models.py
 msgid "Related Open edX learner credential"
@@ -398,6 +406,48 @@ msgstr ""
 "Vérïfïäßlé çrédéntïäl spéçïfïçätïön tö üsé Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
 "¢σηѕє¢тєтυя #"
 
+#: apps/verifiable_credentials/issuance/models.py
+msgid "Defines a position in the Status List sequence"
+msgstr ""
+"Défïnés ä pösïtïön ïn thé Stätüs Lïst séqüénçé Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
+"¢σηѕє¢тєтυя α#"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid "Keeps track on a corresponding user credential's status"
+msgstr ""
+"Kééps träçk ön ä çörréspöndïng üsér çrédéntïäl's stätüs Ⱡ'σяєм ιρѕυм ∂σłσя "
+"ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid ""
+"Issuer secret key. See: https://w3c-ccg.github.io/did-method-"
+"key/#ed25519-x25519"
+msgstr ""
+"Ìssüér séçrét kéý. Séé: https://w3ç-ççg.gïthüß.ïö/dïd-méthöd-"
+"kéý/#éd25519-x25519 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тє#"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid ""
+"There are no enabled Issuance Configurations for some reason! At least one "
+"must be always active."
+msgstr ""
+"Théré äré nö énäßléd Ìssüänçé Çönfïgürätïöns för sömé réäsön! Àt léäst öné "
+"müst ßé älwäýs äçtïvé. Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, #"
+
+#: apps/verifiable_credentials/issuance/status_list.py
+#, python-brace-format
+msgid "Status List generation failed: [{issuer_id}]"
+msgstr ""
+"Stätüs Lïst générätïön fäïléd: [{issuer_id}] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
+"¢σηѕє¢тєтυ#"
+
+#: apps/verifiable_credentials/management/commands/create_default_issuer.py
+#, python-brace-format
+msgid "Verifiable Credentials feature is not enabled [{feature_name}]"
+msgstr ""
+"Vérïfïäßlé Çrédéntïäls féätüré ïs nöt énäßléd [{feature_name}] Ⱡ'σяєм ιρѕυм "
+"∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+
 #: apps/verifiable_credentials/rest_api/v1/views.py
 msgid "Mandatory data is missing"
 msgstr "Mändätörý dätä ïs mïssïng Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕ#"
@@ -423,6 +473,13 @@ msgid ""
 msgstr ""
 "Prövïdéd störägé ßäçkénd ({storage_id}) ïsn't äçtïvé.                 "
 "Störägés: {active_storages} Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυ#"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+#, python-brace-format
+msgid "Can't find an Issuer with such ID [{issuer_id}]"
+msgstr ""
+"Çän't fïnd än Ìssüér wïth süçh ÌD [{issuer_id}] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт,"
+" ¢σηѕє¢тєтυя#"
 
 #: apps/verifiable_credentials/storages/learner_credential_wallet.py
 msgid "Learner Credential Wallet"
