--- a/credentials/conf/locale/rtl/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/rtl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-03-20 09:50+0000\n"
-"PO-Revision-Date: 2023-03-20 09:50:31.906594\n"
+"POT-Creation-Date: 2023-03-26 15:32+0000\n"
+"PO-Revision-Date: 2023-03-26 15:32:55.668953\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: rtl\n"
@@ -313,30 +313,36 @@ msgstr ""
 "Ŧɥǝ ɟølløʍᴉnƃ ᴉs ɐ lᴉsʇ øɟ ɐll ɐɔʇᴉʌǝ dɹøƃɹɐɯs ɟøɹ ʍɥᴉɔɥ dɹøƃɹɐɯ ɹǝɔøɹds ɐɹǝ"
 " bǝᴉnƃ ƃǝnǝɹɐʇǝd."
 
+#: apps/verifiable_credentials/admin.py
+msgid "At least one Issuer must be always enabled!"
+msgstr "Ⱥʇ lǝɐsʇ ønǝ Ɨssnǝɹ ɯnsʇ bǝ ɐlʍɐʎs ǝnɐblǝd!"
+
 #: apps/verifiable_credentials/composition/open_badges.py
 msgid "Open Badges Specification v3.0"
 msgstr "Ødǝn Ƀɐdƃǝs Sdǝɔᴉɟᴉɔɐʇᴉøn ʌ3.0"
+
+#: apps/verifiable_credentials/composition/status_list.py
+#: apps/verifiable_credentials/storages/status_list.py
+msgid "Status List 2021"
+msgstr "Sʇɐʇns Łᴉsʇ 2021"
 
 #: apps/verifiable_credentials/composition/verifiable_credentials.py
 msgid "Verifiable Credentials Data Model v1.1"
 msgstr "Vǝɹᴉɟᴉɐblǝ Ȼɹǝdǝnʇᴉɐls Đɐʇɐ Mødǝl ʌ1.1"
 
-#: apps/verifiable_credentials/issuance/__init__.py
+#: apps/verifiable_credentials/issuance/main.py
 #, python-brace-format
 msgid "Couldn't find such issuance line: [{issuance_uuid}]"
 msgstr "Ȼønldn'ʇ ɟᴉnd snɔɥ ᴉssnɐnɔǝ lᴉnǝ: [{issuance_uuid}]"
 
-#: apps/verifiable_credentials/issuance/__init__.py
+#: apps/verifiable_credentials/issuance/main.py
+#, python-brace-format
+msgid "Seems credential isn't active anymore: [{credential_id}]"
+msgstr "Sǝǝɯs ɔɹǝdǝnʇᴉɐl ᴉsn'ʇ ɐɔʇᴉʌǝ ɐnʎɯøɹǝ: [{credential_id}]"
+
+#: apps/verifiable_credentials/issuance/main.py
 msgid "Provided data didn't validate"
 msgstr "Ᵽɹøʌᴉdǝd dɐʇɐ dᴉdn'ʇ ʌɐlᴉdɐʇǝ"
-
-#: apps/verifiable_credentials/issuance/__init__.py
-msgid "defined property wasn't found within the linked data graph"
-msgstr "dǝɟᴉnǝd dɹødǝɹʇʎ ʍɐsn'ʇ ɟønnd ʍᴉʇɥᴉn ʇɥǝ lᴉnʞǝd dɐʇɐ ƃɹɐdɥ"
-
-#: apps/verifiable_credentials/issuance/__init__.py
-msgid "identifier not recognized"
-msgstr "ᴉdǝnʇᴉɟᴉǝɹ nøʇ ɹǝɔøƃnᴉzǝd"
 
 #: apps/verifiable_credentials/issuance/models.py
 msgid "Related Open edX learner credential"
@@ -362,6 +368,40 @@ msgstr "Vǝɹᴉɟᴉɐblǝ ɔɹǝdǝnʇᴉɐl snbɾǝɔʇ ĐƗĐ"
 msgid "Verifiable credential specification to use"
 msgstr "Vǝɹᴉɟᴉɐblǝ ɔɹǝdǝnʇᴉɐl sdǝɔᴉɟᴉɔɐʇᴉøn ʇø nsǝ"
 
+#: apps/verifiable_credentials/issuance/models.py
+msgid "Defines a position in the Status List sequence"
+msgstr "Đǝɟᴉnǝs ɐ døsᴉʇᴉøn ᴉn ʇɥǝ Sʇɐʇns Łᴉsʇ sǝbnǝnɔǝ"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid "Keeps track on a corresponding user credential's status"
+msgstr "Ꝁǝǝds ʇɹɐɔʞ øn ɐ ɔøɹɹǝsdøndᴉnƃ nsǝɹ ɔɹǝdǝnʇᴉɐl's sʇɐʇns"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid ""
+"Issuer secret key. See: https://w3c-ccg.github.io/did-method-"
+"key/#ed25519-x25519"
+msgstr ""
+"Ɨssnǝɹ sǝɔɹǝʇ ʞǝʎ. Sǝǝ: ɥʇʇds://ʍ3ɔ-ɔɔƃ.ƃᴉʇɥnb.ᴉø/dᴉd-ɯǝʇɥød-"
+"ʞǝʎ/#ǝd25519-x25519"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid ""
+"There are no enabled Issuance Configurations for some reason! At least one "
+"must be always active."
+msgstr ""
+"Ŧɥǝɹǝ ɐɹǝ nø ǝnɐblǝd Ɨssnɐnɔǝ Ȼønɟᴉƃnɹɐʇᴉøns ɟøɹ søɯǝ ɹǝɐsøn! Ⱥʇ lǝɐsʇ ønǝ "
+"ɯnsʇ bǝ ɐlʍɐʎs ɐɔʇᴉʌǝ."
+
+#: apps/verifiable_credentials/issuance/status_list.py
+#, python-brace-format
+msgid "Status List generation failed: [{issuer_id}]"
+msgstr "Sʇɐʇns Łᴉsʇ ƃǝnǝɹɐʇᴉøn ɟɐᴉlǝd: [{issuer_id}]"
+
+#: apps/verifiable_credentials/management/commands/create_default_issuer.py
+#, python-brace-format
+msgid "Verifiable Credentials feature is not enabled [{feature_name}]"
+msgstr "Vǝɹᴉɟᴉɐblǝ Ȼɹǝdǝnʇᴉɐls ɟǝɐʇnɹǝ ᴉs nøʇ ǝnɐblǝd [{feature_name}]"
+
 #: apps/verifiable_credentials/rest_api/v1/views.py
 msgid "Mandatory data is missing"
 msgstr "Mɐndɐʇøɹʎ dɐʇɐ ᴉs ɯᴉssᴉnƃ"
@@ -383,6 +423,11 @@ msgid ""
 msgstr ""
 "Ᵽɹøʌᴉdǝd sʇøɹɐƃǝ bɐɔʞǝnd ({storage_id}) ᴉsn'ʇ ɐɔʇᴉʌǝ.                 "
 "Sʇøɹɐƃǝs: {active_storages}"
+
+#: apps/verifiable_credentials/rest_api/v1/views.py
+#, python-brace-format
+msgid "Can't find an Issuer with such ID [{issuer_id}]"
+msgstr "Ȼɐn'ʇ ɟᴉnd ɐn Ɨssnǝɹ ʍᴉʇɥ snɔɥ ƗĐ [{issuer_id}]"
 
 #: apps/verifiable_credentials/storages/learner_credential_wallet.py
 msgid "Learner Credential Wallet"
