chore: update translations

--- a/credentials/conf/locale/eo/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/eo/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-03-26 15:32+0000\n"
-"PO-Revision-Date: 2023-03-26 15:32:55.668953\n"
+"POT-Creation-Date: 2023-03-30 18:15+0000\n"
+"PO-Revision-Date: 2023-03-30 18:15:31.385780\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: eo\n"
@@ -340,6 +340,10 @@ msgstr ""
 " ßéïng générätéd. Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σ#"
 
 #: apps/verifiable_credentials/admin.py
+msgid "Issuer ID"
+msgstr "Ìssüér ÌD Ⱡ'σяєм ιρѕυм ∂σł#"
+
+#: apps/verifiable_credentials/admin.py
 msgid "At least one Issuer must be always enabled!"
 msgstr ""
 "Àt léäst öné Ìssüér müst ßé älwäýs énäßléd! Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
@@ -426,20 +430,20 @@ msgstr ""
 "Ìssüér séçrét kéý. Séé: https://w3ç-ççg.gïthüß.ïö/dïd-méthöd-"
 "kéý/#éd25519-x25519 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тє#"
 
-#: apps/verifiable_credentials/issuance/models.py
-msgid ""
-"There are no enabled Issuance Configurations for some reason! At least one "
-"must be always active."
-msgstr ""
-"Théré äré nö énäßléd Ìssüänçé Çönfïgürätïöns för sömé réäsön! Àt léäst öné "
-"müst ßé älwäýs äçtïvé. Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, #"
-
 #: apps/verifiable_credentials/issuance/status_list.py
 #, python-brace-format
 msgid "Status List generation failed: [{issuer_id}]"
 msgstr ""
 "Stätüs Lïst générätïön fäïléd: [{issuer_id}] Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, "
 "¢σηѕє¢тєтυ#"
+
+#: apps/verifiable_credentials/issuance/utils.py
+msgid ""
+"There are no enabled Issuance Configurations for some reason! At least one "
+"must be always active."
+msgstr ""
+"Théré äré nö énäßléd Ìssüänçé Çönfïgürätïöns för sömé réäsön! Àt léäst öné "
+"müst ßé älwäýs äçtïvé. Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, #"
 
 #: apps/verifiable_credentials/management/commands/create_default_issuer.py
 #, python-brace-format
