chore: update translations

--- a/credentials/conf/locale/eo/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/eo/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-03-30 18:15+0000\n"
-"PO-Revision-Date: 2023-03-30 18:15:31.385780\n"
+"POT-Creation-Date: 2023-04-03 19:03+0000\n"
+"PO-Revision-Date: 2023-04-03 19:03:38.954324\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: eo\n"
@@ -353,6 +353,11 @@ msgstr ""
 msgid "Open Badges Specification v3.0"
 msgstr "Öpén Bädgés Spéçïfïçätïön v3.0 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢т#"
 
+#: apps/verifiable_credentials/composition/open_badges.py
+msgid "Open Badges Specification v3.0.1"
+msgstr ""
+"Öpén Bädgés Spéçïfïçätïön v3.0.1 Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тє#"
+
 #: apps/verifiable_credentials/composition/status_list.py
 #: apps/verifiable_credentials/storages/status_list.py
 msgid "Status List 2021"
@@ -421,6 +426,14 @@ msgid "Keeps track on a corresponding user credential's status"
 msgstr ""
 "Kééps träçk ön ä çörréspöndïng üsér çrédéntïäl's stätüs Ⱡ'σяєм ιρѕυм ∂σłσя "
 "ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid "Program Certificate"
+msgstr "Prögräm Çértïfïçäté Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт,#"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid "Course Certificate"
+msgstr "Çöürsé Çértïfïçäté Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт#"
 
 #: apps/verifiable_credentials/issuance/models.py
 msgid ""
