--- a/credentials/conf/locale/rtl/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/rtl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-03-30 18:15+0000\n"
-"PO-Revision-Date: 2023-03-30 18:15:31.385780\n"
+"POT-Creation-Date: 2023-04-03 19:03+0000\n"
+"PO-Revision-Date: 2023-04-03 19:03:38.954324\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: rtl\n"
@@ -325,6 +325,10 @@ msgstr "Ⱥʇ lǝɐsʇ ønǝ Ɨssnǝɹ ɯnsʇ bǝ ɐlʍɐʎs ǝnɐblǝd!"
 msgid "Open Badges Specification v3.0"
 msgstr "Ødǝn Ƀɐdƃǝs Sdǝɔᴉɟᴉɔɐʇᴉøn ʌ3.0"
 
+#: apps/verifiable_credentials/composition/open_badges.py
+msgid "Open Badges Specification v3.0.1"
+msgstr "Ødǝn Ƀɐdƃǝs Sdǝɔᴉɟᴉɔɐʇᴉøn ʌ3.0.1"
+
 #: apps/verifiable_credentials/composition/status_list.py
 #: apps/verifiable_credentials/storages/status_list.py
 msgid "Status List 2021"
@@ -379,6 +383,14 @@ msgstr "Đǝɟᴉnǝs ɐ døsᴉʇᴉøn ᴉn ʇɥǝ Sʇɐʇns Łᴉsʇ sǝbnǝn
 #: apps/verifiable_credentials/issuance/models.py
 msgid "Keeps track on a corresponding user credential's status"
 msgstr "Ꝁǝǝds ʇɹɐɔʞ øn ɐ ɔøɹɹǝsdøndᴉnƃ nsǝɹ ɔɹǝdǝnʇᴉɐl's sʇɐʇns"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid "Program Certificate"
+msgstr "Ᵽɹøƃɹɐɯ Ȼǝɹʇᴉɟᴉɔɐʇǝ"
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid "Course Certificate"
+msgstr "Ȼønɹsǝ Ȼǝɹʇᴉɟᴉɔɐʇǝ"
 
 #: apps/verifiable_credentials/issuance/models.py
 msgid ""
