chore: update translations

--- a/credentials/conf/locale/en/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/en/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-04-04 15:02+0000\n"
-"PO-Revision-Date: 2023-04-04 15:02:21.915549\n"
+"POT-Creation-Date: 2023-06-18 17:18+0000\n"
+"PO-Revision-Date: 2023-06-18 17:18:26.845331\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: en\n"
@@ -374,11 +374,37 @@ msgid "Keeps track on a corresponding user credential's status"
 msgstr ""
 
 #: apps/verifiable_credentials/issuance/models.py
-msgid "Program Certificate"
+msgid "program certificate"
 msgstr ""
 
 #: apps/verifiable_credentials/issuance/models.py
-msgid "Course Certificate"
+msgid "course certificate"
+msgstr ""
+
+#: apps/verifiable_credentials/issuance/models.py
+#, python-brace-format
+msgid "program certificate for passing a program {program_title}"
+msgstr ""
+
+#: apps/verifiable_credentials/issuance/models.py
+#, python-brace-format
+msgid ""
+"{credential_type} is granted on program {program_title} completion offered "
+"by {organizations}, in collaboration with {platform_name}. The "
+"{program_title} program includes {course_count} course(s) (, with total "
+"{hours_of_effort} Hours of effort required to complete it.)"
+msgstr ""
+
+#: apps/verifiable_credentials/issuance/models.py
+#, python-brace-format
+msgid ""
+"{recipient_fullname} successfully completed all courses and received passing"
+" grades for a Professional Certificate in {program_title} a program offered "
+"by {organizations}, in collaboration with {platform_name}."
+msgstr ""
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid "recipient"
 msgstr ""
 
 #: apps/verifiable_credentials/issuance/models.py
