--- a/credentials/conf/locale/rtl/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/rtl/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-04-04 15:02+0000\n"
-"PO-Revision-Date: 2023-04-04 15:02:21.915549\n"
+"POT-Creation-Date: 2023-06-18 17:18+0000\n"
+"PO-Revision-Date: 2023-06-18 17:18:26.845331\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: rtl\n"
@@ -389,12 +389,45 @@ msgid "Keeps track on a corresponding user credential's status"
 msgstr "Ꝁǝǝds ʇɹɐɔʞ øn ɐ ɔøɹɹǝsdøndᴉnƃ nsǝɹ ɔɹǝdǝnʇᴉɐl's sʇɐʇns"
 
 #: apps/verifiable_credentials/issuance/models.py
-msgid "Program Certificate"
-msgstr "Ᵽɹøƃɹɐɯ Ȼǝɹʇᴉɟᴉɔɐʇǝ"
+msgid "program certificate"
+msgstr "dɹøƃɹɐɯ ɔǝɹʇᴉɟᴉɔɐʇǝ"
 
 #: apps/verifiable_credentials/issuance/models.py
-msgid "Course Certificate"
-msgstr "Ȼønɹsǝ Ȼǝɹʇᴉɟᴉɔɐʇǝ"
+msgid "course certificate"
+msgstr "ɔønɹsǝ ɔǝɹʇᴉɟᴉɔɐʇǝ"
+
+#: apps/verifiable_credentials/issuance/models.py
+#, python-brace-format
+msgid "program certificate for passing a program {program_title}"
+msgstr "dɹøƃɹɐɯ ɔǝɹʇᴉɟᴉɔɐʇǝ ɟøɹ dɐssᴉnƃ ɐ dɹøƃɹɐɯ {program_title}"
+
+#: apps/verifiable_credentials/issuance/models.py
+#, python-brace-format
+msgid ""
+"{credential_type} is granted on program {program_title} completion offered "
+"by {organizations}, in collaboration with {platform_name}. The "
+"{program_title} program includes {course_count} course(s) (, with total "
+"{hours_of_effort} Hours of effort required to complete it.)"
+msgstr ""
+"{credential_type} ᴉs ƃɹɐnʇǝd øn dɹøƃɹɐɯ {program_title} ɔøɯdlǝʇᴉøn øɟɟǝɹǝd "
+"bʎ {organizations}, ᴉn ɔøllɐbøɹɐʇᴉøn ʍᴉʇɥ {platform_name}. Ŧɥǝ "
+"{program_title} dɹøƃɹɐɯ ᴉnɔlndǝs {course_count} ɔønɹsǝ(s) (, ʍᴉʇɥ ʇøʇɐl "
+"{hours_of_effort} Ħønɹs øɟ ǝɟɟøɹʇ ɹǝbnᴉɹǝd ʇø ɔøɯdlǝʇǝ ᴉʇ.)"
+
+#: apps/verifiable_credentials/issuance/models.py
+#, python-brace-format
+msgid ""
+"{recipient_fullname} successfully completed all courses and received passing"
+" grades for a Professional Certificate in {program_title} a program offered "
+"by {organizations}, in collaboration with {platform_name}."
+msgstr ""
+"{recipient_fullname} snɔɔǝssɟnllʎ ɔøɯdlǝʇǝd ɐll ɔønɹsǝs ɐnd ɹǝɔǝᴉʌǝd dɐssᴉnƃ"
+" ƃɹɐdǝs ɟøɹ ɐ Ᵽɹøɟǝssᴉønɐl Ȼǝɹʇᴉɟᴉɔɐʇǝ ᴉn {program_title} ɐ dɹøƃɹɐɯ øɟɟǝɹǝd "
+"bʎ {organizations}, ᴉn ɔøllɐbøɹɐʇᴉøn ʍᴉʇɥ {platform_name}."
+
+#: apps/verifiable_credentials/issuance/models.py
+msgid "recipient"
+msgstr "ɹǝɔᴉdᴉǝnʇ"
 
 #: apps/verifiable_credentials/issuance/models.py
 msgid ""
