--- a/credentials/conf/locale/eo/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/eo/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 0.1a\n"
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
-"POT-Creation-Date: 2023-06-18 17:18+0000\n"
-"PO-Revision-Date: 2023-06-18 17:18:26.845331\n"
+"POT-Creation-Date: 2023-06-20 12:10+0000\n"
+"PO-Revision-Date: 2023-06-20 12:10:38.598923\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
 "Language: eo\n"
@@ -450,22 +450,22 @@ msgstr ""
 
 #: apps/verifiable_credentials/issuance/models.py
 #, python-brace-format
+msgid ", with total {hours_of_effort} Hours of effort required to complete it"
+msgstr ""
+", wïth tötäl {hours_of_effort} Höürs öf éffört réqüïréd tö çömplété ït "
+"Ⱡ'σяєм ιρѕυм ∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α#"
+
+#: apps/verifiable_credentials/issuance/models.py
+#, python-brace-format
 msgid ""
 "{credential_type} is granted on program {program_title} completion offered "
 "by {organizations}, in collaboration with {platform_name}. The "
-"{program_title} program includes {course_count} course(s) (, with total "
-"{hours_of_effort} Hours of effort required to complete it.)"
+"{program_title} program includes {course_count} course(s){effort_info}."
 msgstr ""
 "{credential_type} ïs gräntéd ön prögräm {program_title} çömplétïön öfféréd "
 "ßý {organizations}, ïn çölläßörätïön wïth {platform_name}. Thé "
-"{program_title} prögräm ïnçlüdés {course_count} çöürsé(s) (, wïth tötäl "
-"{hours_of_effort} Höürs öf éffört réqüïréd tö çömplété ït.) Ⱡ'σяєм ιρѕυм "
-"∂σłσя ѕιт αмєт, ¢σηѕє¢тєтυя α∂ιριѕι¢ιηg єłιт, ѕє∂ ∂σ єιυѕмσ∂ тємρσя "
-"ιη¢ι∂ι∂υηт υт łαвσяє єт ∂σłσяє мαgηα αłιqυα. υт єηιм α∂ мιηιм νєηιαм, qυιѕ "
-"ησѕтяυ∂ єχєя¢ιтαтιση υłłαм¢σ łαвσяιѕ ηιѕι υт αłιqυιρ єχ єα ¢σммσ∂σ "
-"¢σηѕєqυαт. ∂υιѕ αυтє ιяυяє ∂σłσя ιη яєρяєнєη∂єяιт ιη νσłυρтαтє νєłιт єѕѕє "
-"¢ιłłυм ∂σłσяє єυ ƒυgιαт ηυłłα ραяιαтυя. єχ¢єρтєυя ѕιηт σ¢¢αє¢αт ¢υρι∂αтαт "
-"ηση ρяσι∂єηт, ѕυ#"
+"{program_title} prögräm ïnçlüdés {course_count} çöürsé(s){effort_info}. "
+"Ⱡ'σяєм#"
 
 #: apps/verifiable_credentials/issuance/models.py
 #, python-brace-format
