--- a/credentials/conf/locale/cs/LC_MESSAGES/djangojs.po
+++ b/credentials/conf/locale/cs/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@
 # Jan Chromý <jan.chromy@gmail.com>, 2018
 # Anna Chromá <anicka.chroma@gmail.com>, 2018
 # Tomáš Batelka <tomas.batelka@email.cz>, 2021
-# trendspotter <jirka.p@volny.cz>, 2022
+# Jiří Podhorecký, 2022
 # Aleš Fiala <f.ales1@seznam.cz>, 2022
 # 
 msgid ""
