--- a/credentials/conf/locale/de_DE/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/de_DE/LC_MESSAGES/django.po
@@ -14,7 +14,7 @@
 # mc <marc.mannsfeld@phil.hhu.de>, 2018
 # Alexander L. <alexander.lohberg@ufo-style.de>, 2020
 # Donna Kl <donna@polarstern-education.com>, 2020
-# Stefania Trabucchi <stefania.trabucchi@abstract-technology.de>, 2021
+# Stefania Trabucchi <stefania.trabucchi@abstract-technology.de>, 2023
 # 
 msgid ""
 msgstr ""
@@ -22,7 +22,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
 "POT-Creation-Date: 2022-11-22 08:35-0500\n"
 "PO-Revision-Date: 2016-09-14 14:52+0000\n"
-"Last-Translator: Stefania Trabucchi <stefania.trabucchi@abstract-technology.de>, 2021\n"
+"Last-Translator: Stefania Trabucchi <stefania.trabucchi@abstract-technology.de>, 2023\n"
 "Language-Team: German (Germany) (https://www.transifex.com/open-edx/teams/6205/de_DE/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -246,6 +246,9 @@ msgid ""
 "The certificate available date and time that is set in Studio and copied to "
 "Credentials. This should be edited in Studio."
 msgstr ""
+"Das Datum und die Uhrzeit der Verfügbarkeit des Zertifikats, die in Studio "
+"festgelegt und in die Credentials kopiert wurden. Dies sollte in Studio "
+"bearbeitet werden."
 
 #: apps/credentials/models.py
 msgid "Program UUID"
