--- a/credentials/conf/locale/de_DE/LC_MESSAGES/djangojs.po
+++ b/credentials/conf/locale/de_DE/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@
 # Akif Vohra <akifvohra@gmail.com>, 2018
 # Bert Krohn <bert.krohn@tum.de>, 2018
 # Muhammad Ayub khan <ayubkhan@edx.org>, 2018
-# Stefania Trabucchi <stefania.trabucchi@abstract-technology.de>, 2019
+# Stefania Trabucchi <stefania.trabucchi@abstract-technology.de>, 2023
 # 
 msgid ""
 msgstr ""
@@ -16,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: openedx-translation@googlegroups.com\n"
 "POT-Creation-Date: 2022-11-22 08:35-0500\n"
 "PO-Revision-Date: 2018-05-01 20:19+0000\n"
-"Last-Translator: Stefania Trabucchi <stefania.trabucchi@abstract-technology.de>, 2019\n"
+"Last-Translator: Stefania Trabucchi <stefania.trabucchi@abstract-technology.de>, 2023\n"
 "Language-Team: German (Germany) (https://www.transifex.com/open-edx/teams/6205/de_DE/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -307,6 +307,9 @@ msgid ""
 "else of your choosing. Anyone you share this link with will have access to "
 "your record forever."
 msgstr ""
+"Kopieren Sie diesen Link, um Ihren Eintrag an eine Universität, einen "
+"Arbeitgeber oder eine andere Person Ihrer Wahl weiterzugeben. Jeder, dem Sie"
+" diesen Link weitergeben, hat für immer Zugang zu Ihrem Eintrag."
 
 #: static/components/ShareProgramRecordModal.jsx
 msgid "Program Record URL"
