--- a/credentials/conf/locale/ar_SA/LC_MESSAGES/django.po
+++ b/credentials/conf/locale/ar_SA/LC_MESSAGES/django.po
@@ -1,31 +1,22 @@
-# edX translation file.
-# Copyright (C) 2021 EdX
-# This file is distributed under the GNU AFFERO GENERAL PUBLIC LICENSE.
-# EdX Team <info@edx.org>, 2021.
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-# Translators:
-# Sira Nokyoongtong <gumaraa@gmail.com>, 2016
-# Sorathan Chaturapruek <tummykung@gmail.com>, 2016
-# Sanyapong Kridakarn <sanyapong@kelanggreen.com>, 2016
-# Noppachai Eiamwasant <noporo@hotmail.com>, 2018
-# Jirayu Chamamahattana <mman2x@gmail.com>, 2018
-# edx demo <edx.one2clouds@gmail.com>, 2019
-# Punsarn <translator@punsarn.asia>, 2019
-# เรียก'สิ โซปอน <phamonti.pangklang@gmail.com>, 2020
-#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: 0.1a\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2024-04-17 15:54+0000\n"
-"PO-Revision-Date: 2016-09-14 14:52+0000\n"
-"Last-Translator: เรียก'สิ โซปอน <phamonti.pangklang@gmail.com>, 2020\n"
-"Language-Team: Thai (https://www.transifex.com/open-edx/teams/6205/th/)\n"
-"Language: th\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 
 #: credentials/apps/badges/admin.py:103
 msgid "Badge templates were successfully updated."
@@ -718,6 +709,7 @@ msgstr ""
 msgid "%(num_hours)s hour"
 msgid_plural "%(num_hours)s hours"
 msgstr[0] ""
+msgstr[1] ""
 
 #: credentials/templates/credentials/programs/base.html:138
 #, python-brace-format
